--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.initialization-mode=always
 
 #jOOQ Configuration
 spring.jooq.sql-dialect=Postgres
+
+spring.cache.jcache.config=ehcache.xml
